Use Gradle instead of Maven (#58)